[gd_scene load_steps=5 format=3 uid="uid://xkqclguvn2ae"]

[ext_resource type="Script" path="res://levels/menu.gd" id="1_6f46b"]
[ext_resource type="Theme" uid="uid://dgn8di0o6fpt1" path="res://Button_color.tres" id="1_dxds7"]
[ext_resource type="Texture2D" uid="uid://dgjty1pmjigb2" path="res://background_01.png" id="1_hqju7"]
[ext_resource type="Texture2D" uid="uid://xlhtyublc8ek" path="res://background_02.png" id="2_j1g31"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dxds7")
script = ExtResource("1_6f46b")

[node name="Background1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hqju7")

[node name="Background2" type="TextureRect" parent="Background1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j1g31")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0164931
anchor_top = 0.817901
anchor_right = 0.171875
anchor_bottom = 0.947531
offset_left = 40.0
offset_top = -148.0
offset_right = 119.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "START"

[node name="Selecter" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SELECT LEVELS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Selecter" to="." method="_on_selecter_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
